--- a/indeks.html
+++ b/indeks.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ini judul</title>
+  <title>BIODATA</title>
 </head>
+<H1>Tentang Saya</H1>
 <body>
-<h1>judul web</h1>
-<h2>sub judul web</h2>
-<ol>
-	<li>isi 1</li>
-	<li>isi 2</li>
-</ol>
-<ul>
-	<li>isilagi</li>
-	<li>isii nyaaa</li>
-</ul>
+  <pre> profile <br>
+  Nama : Laila Marsyitah
+Umur:17
+Hobi : Baca novel 
+Idola: One direction & Raditya Dika
+Sekolah: SMK SMAK BOGOR</pre>
 <img src="download.jpeg">
-<a href="https://apple.com"></a><img src="apel.jpeg">
+<pre>SAYA</pre>
+  <img src="nela.JPG" width="300">
+  <PRE>HOBII</PRE>
+  <img src="laila.jpg" width="300">
+  <pre>idolaa</pre>
+<img src="woi.png" width="300">
+<pre>GIF</pre>
+<img src="animasi.gif" width="300">
 </body>
 </html>
